# thot-pocket

./: Cargo.toml  README.md  RESEARCH.md  Thot-Pocket-Pitch.key
demo/: .gitignore  Cargo.toml  build.sh  wrangler.toml
demo/.wrangler/cache/: pages.json  wrangler-account.json
demo/src/: lib.rs
demo/web/: dumb-gaze.js  face.js  hud.js  index.html  main.js  mediapipe-input.js  smart-gaze.js  style.css
src/: culture.rs  eyes.rs  gaze.rs  lib.rs
train/: dataset.py  export_rust.py  model.py  requirements.txt  train.py
